fixed z-index

--- a/sass/components/_scroll-to-top.scss
+++ b/sass/components/_scroll-to-top.scss
@@ -9,5 +9,5 @@
 
   cursor: pointer;
   display: none;
-  z-index: 1000;
+  z-index: 40;
 }
